--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -60,8 +60,10 @@
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
     "success-activation-title": "Erfolgreich importiert!",
     "success-activation-body": "Ihr 3-G Nachweis wurde erfolgreich importiert.",
+    "invalid-qr-code": "Keinen 3-G Nachweis gefunden.",
     "invalid-qr-code-title": "Ungültiger QR Code!",
     "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3-G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
+    "no-qr-code": "Es wurde kein QR Code gefunden.",
     "no-qr-code-title": "Kein QR Code gefunden!",
     "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "qr-button-text": "QR Code scannen",
