--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -16,21 +16,15 @@
     "uploaded-success-message": "Ein 3-G Nachweis wurde erfolgreich überprüft und ist aktiv bis",
     "valid-until": "{{date}} um {{clock}} Uhr.",
     "delete-button-text": "Löschen",
-    "refresh-button-text": "Ersetzen",
-    "inline-notification-text": "Ein gültiger 3-G Nachweis wurde gefunden!",
     "inline-notification-warning": "Ihr 3-G Nachweis läuft in Kürze ab!",
-    "activate-button-title": "Aktivieren",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "delete-certificate-failed-title": "Fehler!",
     "delete-certificate-failed-body": "Es ist ein Fehler beim Entfernen Ihres 3-G Nachweises aufgetreten.",
     "delete-certificate-not-found-title": "Fehler!",
     "delete-certificate-not-found-body": "Das Zertifikat wurde nicht gefunden.",
     "delete-certificate-success-title": "Löschen erfolgreich!",
     "delete-certificate-success-body": "Ihr 3-G Nachweis wurde erfolgreich aus dem System entfernt.",
-    "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "manual-uploading-message": "Suche nach validem QR Code...",
     "confirm-text": "Wollen Sie Ihren 3-G Nachweis wirklich löschen?"
   },
@@ -58,36 +52,21 @@
   },
   "acquire-3g-ticket": {
     "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "success-activation-title": "Erfolgreich importiert!",
-    "success-activation-body": "Ihr 3-G Nachweis wurde erfolgreich importiert.",
     "invalid-qr-code": "Keinen 3-G Nachweis gefunden.",
-    "invalid-qr-code-title": "Ungültiger QR Code!",
-    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3-G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "no-qr-code": "Es wurde kein QR Code gefunden.",
     "no-qr-code-title": "Kein QR Code gefunden!",
     "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
     "qr-button-text": "QR Code scannen",
     "manually-button-text": "Datei hochladen",
-    "activate-button-title": "Aktivieren",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "filepicker-open-button-title": "Datei zur Überprüfung auswählen",
     "manual-uploading-message": "Suche nach validem QR Code...",
-    "confirm-text": "Wollen Sie Ihren 3-G Nachweis wirklich löschen?",
-    "no-proof-found-message": "Es wurden keine 3-G Informationen importiert.",
-    "valid-proof-uploaded-message": "Lokale 3-G Informationen gefunden und erfolgreich importiert.",
     "place-select-title": "Ticket für",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
-    "refresh-button-text": "Ticket verlängern",
-    "no-proof-continue": "Ticket ohne 3-G Nachweis erstellen",
     "create-ticket": "Ticket erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
-    "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
-    "refresh-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
-    "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "check-in-link-description": "Möchten Sie auch am Contact Tracing der TU Graz teilnehmen?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Aktive Tickets anzeigen",
@@ -95,28 +74,24 @@
     "skip-button-text": "Überspringen",
     "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
-    "valid-cert-found-text": "Bestehenden 3-G Nachweis verwenden",
-    "store-valid-cert-text": "3-G Nachweis für später speichern.",
     "3g-proof-label-text": "3-G Nachweis überprüfen",
-    "valid-cert-found-alternative": "Nicht verwenden",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
-    "found-valid-3g-title": "Gültige 3-G Nachweis gefunden",
-    "found-valid-3g-body": "Es wurde ein gültiger 3-G Nachweis erfolgreich importiert.",
     "found-valid-selfetest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
     "found-valid-selfetest": "Es wurden ein Selbsttest gefunden.",
     "not-same-person": "Die Person im hochgeladenen Nachweis stimmt nicht mit der angmeldeten Person überein.",
     "cannot-process-data": "Der hochgeladene Nachweis konnte nicht verarbeitet werden.",
     "cannot-process-data-title": "Problem bei der Verarbeitung aufgetreten",
-    "cannot-process-data-body": "Der hochgeladene Nachweis konnte nicht verarbeitet werden. Bitte probieren Sie es noch einmal oder überspringen Sie den Upload Vorgang.",
     "validate-error": "Ein Fehler ist aufgetreten.",
     "validate-error-title": "Ein Fehler ist aufgetreten",
     "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
     "hcert-invalid": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-body": "Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
-    "use-3g-proof": "Diesen Nachweis verwenden"
+    "cannot-process-body": "",
+    "failed-activation-wrong-person-title": "",
+    "failed-activation-wrong-person-body": ""
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
@@ -129,18 +104,17 @@
     "show-btn-text": "Zeigen",
     "refresh-btn-text": "Verlängern",
     "show-ticket-title": "Ticket für Ort: ",
-    "show-ticket-description": "TODO: Beschreibung",
     "refresh-ticket-success-title": "Ticket erfolgreich verlängert!",
     "refresh-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich verlängert.",
     "delete-ticket-success-title": "Ticket erfolgreich gelöscht!",
     "delete-ticket-success-body": "Das Ticket für den Ort {{place}} wurde erfolgreich gelöscht.",
     "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
-  },
-  "info": {
-    "title": "Information",
-    "description": "Mit dieser Applikation erhalten Sie Informationen über greenlight.tugraz.at."
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "preselected-place": ""
   },
   "error-login-message": "Sie müssen eingeloggt sein um diese Funktion nutzen zu können!",
-  "loading-message": "Lädt..."
+  "loading-message": "Lädt...",
+  "file-sink": {
+    "modal-close": ""
+  }
 }
