--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -16,21 +16,15 @@
     "uploaded-success-message": "A 3-G evidence has been successfully verified and is active until",
     "valid-until": "{{date}} at {{clock}}.",
     "delete-button-text": "Delete",
-    "refresh-button-text": "Replace",
-    "inline-notification-text": "A valid 3-G evidence was found!",
     "inline-notification-warning": "Your 3-G evidence will expire soon!",
-    "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
     "filepicker-context": "Choose File for 3-G Verification",
-    "filepicker-open-button-title": "Choose File for Verification",
     "delete-certificate-failed-title": "Error!",
     "delete-certificate-failed-body": "An error occurred while removing your 3-G evidence.",
     "delete-certificate-not-found-title": "Error!",
     "delete-certificate-not-found-body": "The certificate could not be found.",
     "delete-certificate-success-title": "Successful deleted!",
     "delete-certificate-success-body": "Your 3-G evidence has been successfully removed.",
-    "other-error-title": "Error!",
-    "other-error-body": "An unknown error has occurred.",
     "manual-uploading-message": "Search for valid QR Code...",
     "confirm-text": "Do you really want to delete your 3-G evidence?"
   },
@@ -54,41 +48,25 @@
     "check-in-link-description": "Do you want to support contact tracing at TU Graz?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Show active tickets",
-    "manage-tickets-text": "You can manage your active tickets at: ",
-    "skip-button-text": "Skip"
+    "manage-tickets-text": "You can manage your active tickets at: "
   },
   "acquire-3g-ticket": {
     "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3G evidence and be able to prove it in case of a manual control.",
-    "success-activation-title": "Successful Activation!",
-    "success-activation-body": "Your 3-G evidence has been successfully activated.",
     "invalid-qr-code": "No 3-G evidence found.",
-    "invalid-qr-code-title": "Invalid QR Code!",
-    "invalid-qr-code-body": "This QR code is not a valid 3-G evidence. Please use another one or select the manual 3-G inspection at the ticket store.",
     "no-qr-code": "No QR code was found.",
     "no-qr-code-title": "No QR code found!",
     "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
     "qr-button-text": "Scan QR Code",
     "manually-button-text": "Upload File",
-    "activate-button-title": "Activate",
     "filepicker-button-title": "Choose File",
     "filepicker-context": "Choose File for 3-G Verification",
-    "filepicker-open-button-title": "Choose File for Verification",
     "manual-uploading-message": "Search for valid QR Code...",
-    "confirm-text": "Do you really want to delete your 3-G evidence?",
-    "no-proof-found-message": "No 3-G information was imported.",
-    "valid-proof-uploaded-message": "3-G information found and successfully imported.",
     "place-select-title": "Select a place",
     "manual-proof-text": "I certify that I am vaccinated, tested, or recovered and carry valid evidence of such for the duration of my stay in this room and can present such evidence in the event of a manual inspection.",
     "confirm-button-text": "Create a Ticket",
-    "refresh-button-text": "Refresh Ticket",
-    "no-proof-continue": "Acquire ticket without 3-G evidence",
     "create-ticket": "Create ticket",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
-    "refresh-ticket-success-title": "Ticket successfully refreshed!",
-    "refresh-ticket-success-body": "The acquired ticket for {{place}} was successfully refreshed.",
-    "other-error-title": "Error!",
-    "other-error-body": "An unknown error has occurred.",
     "check-in-link-description": "Do you want to use contact tracing at TU Graz?",
     "check-in-link-text": "TU Graz check-in",
     "manage-tickets-link": "Show active tickets",
@@ -96,24 +74,24 @@
     "skip-button-text": "Skip",
     "confirm-checkbox-valid-cert-text": "I confirm that my information is correct and that I may be liable to prosecution in the event of fraud.",
     "confirm-checkbox-no-cert-text": "I confirm that the information I have provided is correct and that I may be liable to prosecution in the event of fraud.",
-    "valid-cert-found-text": "Use existing 3-G evidence",
-    "store-valid-cert-text": "Save 3-G evidence for later.",
     "3g-proof-label-text": "Use 3-G Information",
-    "valid-cert-found-alternative": "Do not use it",
     "found-valid-3g-preCheck": "Stored valid 3-G information could be found.",
     "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
     "found-valid-selfetest": "A self-test was found.",
     "not-same-person": "The person in the uploaded certificate does not match the person logged in.",
     "cannot-process-data": "The uploaded evidence could not be processed.",
     "cannot-process-data-title": "There was a problem processing",
-    "cannot-process-data-body": "The uploaded evidence could not be processed. Please try again or skip the upload process.",
     "validate-error": "An error has occurred.",
     "validate-error-title": "An error has occurred",
     "validate-error-body": "Please try again or skip the process.",
     "hcert-invalid": "Uploaded evidence is invalid.",
     "hcert-invalid-title": "Uploaded evidence is invalid.",
     "hcert-invalid-body": "Please upload a valid 3-G certificate or skip the process.",
-    "use-3g-proof": "Use this proof"
+    "found-valid-3g": "",
+    "cannot-process-body": "",
+    "remove-proof": "",
+    "failed-activation-wrong-person-title": "",
+    "failed-activation-wrong-person-body": ""
   },
   "show-active-tickets": {
     "title": "Show all active tickets",
@@ -126,18 +104,17 @@
     "show-btn-text": "Show",
     "refresh-btn-text": "Refresh",
     "show-ticket-title": "Ticket for place: ",
-    "show-ticket-description": "TODO: description",
     "refresh-ticket-success-title": "Ticket successfully refreshed!",
     "refresh-ticket-success-body": "The ticket for {{place}} was successfully refreshed.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
     "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten."
-  },
-  "info": {
-    "title": "Information",
-    "description": "With this application you get information about greenlight.tugraz.at."
+    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "preselected-place": ""
   },
   "error-login-message": "You need to be logged in to use this function!",
-  "loading-message": "Loading..."
+  "loading-message": "Loading...",
+  "file-sink": {
+    "modal-close": ""
+  }
 }
