--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -66,7 +66,15 @@
     "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-body": "Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
     "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
-    "failed-activation-wrong-person-body": "Die Person vom hochgeladenen Nachweis stimmt eventuell nicht mit der angemeldeten Person überein."
+    "failed-activation-wrong-person-body": "Die Person vom hochgeladenen Nachweis stimmt eventuell nicht mit der angemeldeten Person überein.",
+    "selfe-test": "Selbsttest",
+    "selfe-test-link": "Link",
+    "selfe-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
+    "3g-proof": "3-G Nachweis",
+    "3g-proof-status": "Status",
+    "3g-proof-status-valid": "gültig",
+    "3g-proof-proof-from": "Von",
+    "3g-proof-proof-birthdate": "Geburtsdatum"
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
