--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -47,8 +47,8 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich im Betrugsfall strafbar machen kann.",
-    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich im Betrugsfall strafbar machen kann.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich bei Missbrauch strafbar machen kann.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich bei Missbrauch strafbar machen kann.",
     "3g-proof-label-text": "3-G Nachweis überprüfen",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
@@ -74,7 +74,8 @@
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "gültig",
     "3g-proof-proof-from": "Von",
-    "3g-proof-proof-birthdate": "Geburtsdatum"
+    "3g-proof-birthdate": "Geburtsdatum",
+    "trust-and-save": "Diesem Gerät vertrauen und 3-G Nachweis importieren."
   },
   "show-active-tickets": {
     "title": "Zeige alle aktiven Tickets",
