--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -53,7 +53,7 @@
     "found-valid-3g-preCheck": "Stored valid 3-G information could be found.",
     "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
     "found-valid-selfetest": "A self-test was found.",
-    "not-same-person": "The person in the uploaded certificate does not match the person logged in.",
+    "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
     "cannot-process-data": "The uploaded evidence could not be processed.",
     "cannot-process-data-title": "There was a problem processing",
     "cannot-process-body-data": "The uploaded evidence could not be processed. Please try again or skip the upload process.",
@@ -62,11 +62,11 @@
     "validate-error-body": "Please try again or skip the process.",
     "hcert-invalid": "Uploaded evidence is invalid.",
     "hcert-invalid-title": "Uploaded evidence is invalid.",
-    "hcert-invalid-body": "Please upload a valid 3-G certificate or skip the process.",
-    "found-valid-3g": "A valid 3-G certificate was imported.",
+    "hcert-invalid-body": "Please upload a valid 3-G evidence or skip the process.",
+    "found-valid-3g": "A valid 3-G evidence was imported.",
     "remove-proof": "Remove evidence",
     "failed-activation-wrong-person-title": "Inconsistencies found",
-    "failed-activation-wrong-person-body": "The person from the uploaded credentials may not match the person registered.",
+    "failed-activation-wrong-person-body": "The person from the uploaded evidence may not match the person logged in.",
     "selfe-test": "Selfetest",
     "selfe-test-link": "Link",
     "selfe-test-information": "Please check whether the proof is still valid.",
@@ -74,7 +74,8 @@
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "valid",
     "3g-proof-proof-from": "From",
-    "3g-proof-proof-birthdate": "birthdate"
+    "3g-proof-birthdate": "birthdate",
+    "trust-and-save": "Trust this device and import 3-G evidence."
   },
   "show-active-tickets": {
     "title": "Show all active tickets",
