--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -47,8 +47,8 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige, dass meine Angaben richtig sind und dass ich mich bei Missbrauch strafbar machen kann.",
-    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und dass ich mich bei Missbrauch strafbar machen kann.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App Greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App Greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
