--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -47,8 +47,8 @@
     "manage-tickets-link": "Show active tickets",
     "manage-tickets-text": "You can manage your active tickets at: ",
     "skip-button-text": "Skip",
-    "confirm-checkbox-valid-cert-text": "I confirm that my evidence is correct and that I may be liable to prosecution in the event of fraud.",
-    "confirm-checkbox-no-cert-text": "I confirm that the evidence I have provided is correct and that I may be liable to prosecution in the event of fraud.",
+    "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the Greenlight app or the provision of incorrect data can lead to legal consequences.",
+    "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the Greenlight app or the provision of incorrect data can lead to legal consequences.",
     "3g-proof-label-text": "Import 3-G evidence",
     "found-valid-3g-preCheck": "Stored valid 3-G evidence could be found.",
     "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
