Show active ticket in colour if there is a valid check in local storage

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -53,8 +53,8 @@
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
-    "found-valid-selfetest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
-    "found-valid-selfetest": "Es wurden ein Selbsttest gefunden.",
+    "found-valid-selftest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
+    "found-valid-selftest": "Es wurden ein Selbsttest gefunden.",
     "not-same-person": "Die Person im hochgeladenen Nachweis stimmt nicht mit der angmeldeten Person überein.",
     "cannot-process-data": "Der hochgeladene Nachweis konnte nicht verarbeitet werden.",
     "cannot-process-data-title": "Problem bei der Verarbeitung aufgetreten",
@@ -67,9 +67,9 @@
     "hcert-invalid-body": "Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
     "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
     "failed-activation-wrong-person-body": "Die Person vom hochgeladenen Nachweis stimmt eventuell nicht mit der angemeldeten Person überein.",
-    "selfe-test": "Selbsttest",
-    "selfe-test-link": "Link",
-    "selfe-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
+    "self-test": "Selbsttest",
+    "self-test-link": "Link",
+    "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "3g-proof": "3-G Nachweis",
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "gültig",
