--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -51,8 +51,8 @@
     "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the Greenlight app or the provision of incorrect data can lead to legal consequences.",
     "3g-proof-label-text": "Import 3-G evidence",
     "found-valid-3g-preCheck": "Stored valid 3-G evidence could be found.",
-    "found-valid-selfetest-preCheck": "A locally saved self-test was found.",
-    "found-valid-selfetest": "A self-test was found.",
+    "found-valid-selftest-preCheck": "A locally saved self-test was found.",
+    "found-valid-selftest": "A self-test was found.",
     "not-same-person": "The person in the uploaded evidence does not match the person logged in.",
     "cannot-process-data": "The uploaded evidence could not be processed.",
     "cannot-process-data-title": "There was a problem processing",
@@ -67,9 +67,9 @@
     "remove-proof": "Remove evidence",
     "failed-activation-wrong-person-title": "Inconsistencies found",
     "failed-activation-wrong-person-body": "The person from the uploaded evidence may not match the person logged in.",
-    "selfe-test": "Selfetest",
-    "selfe-test-link": "Link",
-    "selfe-test-information": "Please check whether the proof is still valid.",
+    "self-test": "Selftest",
+    "self-test-link": "Link",
+    "self-test-information": "Please check whether the proof is still valid.",
     "3g-proof": "3-G evidence",
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "valid",
