Move checkin notification to slot

--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -42,8 +42,7 @@
     "create-ticket": "Ticket erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
-    "check-in-link-description": "Möchten Sie auch am Contact Tracing der TU Graz teilnehmen?",
-    "check-in-link-text": "TU Graz check-in",
+    "check-in-link-description": "Denken Sie auch an die Möglichkeit am Contact Tracing teilzunehmen!",
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
