--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -42,8 +42,7 @@
     "create-ticket": "Create ticket",
     "create-ticket-success-title": "Ticket successfully created!",
     "create-ticket-success-body": "The acquired ticket for {{place}} was successfully created.",
-    "check-in-link-description": "Do you want to use contact tracing at TU Graz?",
-    "check-in-link-text": "TU Graz check-in",
+    "check-in-link-description": "Also consider using contact tracing!",
     "manage-tickets-link": "Show active tickets",
     "manage-tickets-text": "You can manage your active tickets at: ",
     "skip-button-text": "Skip",
