--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -71,7 +71,7 @@
     "self-test-information": "Please check whether the proof is still valid.",
     "3g-proof": "3-G evidence",
     "3g-proof-status": "Status",
-    "3g-proof-status-valid": "valid until {{date}}",
+    "3g-proof-status-valid": "expected to be valid until {{date}}",
     "3g-proof-proof-from": "From",
     "3g-proof-birthdate": "birthdate",
     "trust-and-save": "Trust this device and import 3-G evidence.",
@@ -95,11 +95,16 @@
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
-    "preselected-place": ""
+    "preselected-place": "Place",
+    "3g-evidence": "3-G evidence:",
+    "self-test-found": "Self-test found",
+    "self-test-information": "Please check whether the proof is still valid.",
+    "self-test": "self-test",
+    "self-test-link": "Link to the test"
   },
   "error-login-message": "You need to be logged in to use this function!",
   "loading-message": "Loading...",
   "file-sink": {
-    "modal-close": ""
+    "modal-close": "Close"
   }
 }
