--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -26,8 +26,8 @@
     "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
   },
   "acquire-3g-ticket": {
-    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "invalid-qr-code": "Keinen 3-G Nachweis gefunden.",
+    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G Regel) hochladen indem Sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "invalid-qr-code": "Der QR Code enthält keinen gültigen 3-G Nachweis.",
     "no-qr-code": "Es wurde kein QR Code gefunden.",
     "no-qr-code-title": "Kein QR Code gefunden!",
     "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
@@ -46,26 +46,26 @@
     "manage-tickets-link": "Aktive Tickets anzeigen",
     "manage-tickets-text": "Es wurden aktive Tickets gefunden. Sie können Ihre aktiven Tickets vorzeigen oder löschen unter: ",
     "skip-button-text": "Überspringen",
-    "confirm-checkbox-valid-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App Greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
-    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App Greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-valid-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
+    "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "3g-proof-label-text": "3-G Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
     "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
     "found-valid-selftest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
     "found-valid-selftest": "Es wurden ein Selbsttest gefunden.",
-    "not-same-person": "Die Person im hochgeladenen Nachweis stimmt nicht mit der angmeldeten Person überein.",
+    "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "cannot-process-data": "Der hochgeladene Nachweis konnte nicht verarbeitet werden.",
     "cannot-process-data-title": "Problem bei der Verarbeitung aufgetreten",
-    "cannot-process-data-body": "Der hochgeladene Nachweis konnte nicht verarbeitet werden. Bitte probieren Sie es noch einmal oder überspringen Sie den Upload Vorgang.",
+    "cannot-process-data-body": "Der hochgeladene Nachweis konnte nicht verarbeitet werden. Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Upload Vorgang.",
     "validate-error": "Ein Fehler ist aufgetreten.",
     "validate-error-title": "Ein Fehler ist aufgetreten",
     "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
     "hcert-invalid": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
-    "hcert-invalid-body": "Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
+    "hcert-invalid-body": "Der 3G-Nachweis ist aktuell nicht für den Eintritt gültig. Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
     "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
-    "failed-activation-wrong-person-body": "Die Person vom hochgeladenen Nachweis stimmt eventuell nicht mit der angemeldeten Person überein.",
+    "failed-activation-wrong-person-body": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "self-test": "Selbsttest",
     "self-test-link": "Link",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
