--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -27,7 +27,7 @@
   },
   "acquire-3g-ticket": {
     "additional-information": "You can scan a QR code or upload an existing PDF or image to use it to log in directly at a location for a certain period of time. This is needed to be allowed to enter a location. Alternatively, you can manually confirm that you are carrying 3G evidence and be able to prove it in case of a manual control.",
-    "invalid-qr-code": "No 3-G evidence found.",
+    "invalid-qr-code": "No valid 3-G evidence found.",
     "no-qr-code": "No QR code was found.",
     "no-qr-code-title": "No QR code found!",
     "no-qr-code-body": "No QR code was found in the uploaded document. Please use another document or select the manual 3-G inspection at the ticket store.",
@@ -46,8 +46,8 @@
     "manage-tickets-link": "Show active tickets",
     "manage-tickets-text": "You can manage your active tickets at: ",
     "skip-button-text": "Skip",
-    "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the Greenlight app or the provision of incorrect data can lead to legal consequences.",
-    "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the Greenlight app or the provision of incorrect data can lead to legal consequences.",
+    "confirm-checkbox-valid-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
+    "confirm-checkbox-no-cert-text": "I confirm the accuracy of my evidence and understand that any misuse of the greenlight app or the provision of incorrect data can lead to legal consequences.",
     "3g-proof-label-text": "Import 3-G evidence",
     "found-valid-3g-preCheck": "Stored valid 3-G evidence could be found.",
     "found-valid-selftest-preCheck": "A locally saved self-test was found.",
@@ -61,14 +61,14 @@
     "validate-error-body": "Please try again or skip the process.",
     "hcert-invalid": "Uploaded evidence is invalid.",
     "hcert-invalid-title": "Uploaded evidence is invalid.",
-    "hcert-invalid-body": "Please upload a valid 3-G evidence or skip the process.",
+    "hcert-invalid-body": "The uploaded evidence is not sufficient. Please upload a valid 3-G evidence or skip the process.",
     "found-valid-3g": "A valid 3-G evidence was imported.",
     "remove-proof": "Remove evidence",
     "failed-activation-wrong-person-title": "Inconsistencies found",
-    "failed-activation-wrong-person-body": "The person from the uploaded evidence may not match the person logged in.",
+    "failed-activation-wrong-person-body": "The person from the uploaded evidence does not match the person logged in.",
     "self-test": "Selftest",
     "self-test-link": "Link",
-    "self-test-information": "Please check whether the proof is still valid.",
+    "self-test-information": "Please check whether the evidence is still valid.",
     "3g-proof": "3-G evidence",
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "expected to be valid until {{date}}",
@@ -93,12 +93,12 @@
     "refresh-ticket-success-body": "The ticket for {{place}} was successfully refreshed.",
     "delete-ticket-success-title": "Ticket successfully deleted!",
     "delete-ticket-success-body": "The ticket for {{place}} was successfully deleted.",
-    "other-error-title": "Fehler!",
-    "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
+    "other-error-title": "Error!",
+    "other-error-body": "An unknown error occurred.",
     "preselected-place": "Place",
     "3g-evidence": "3-G evidence:",
     "self-test-found": "Self-test found",
-    "self-test-information": "Please check whether the proof is still valid.",
+    "self-test-information": "Please check whether the evidence is still valid.",
     "self-test": "self-test",
     "self-test-link": "Link to the test"
   },
