--- a/src/i18n/de/translation.json
+++ b/src/i18n/de/translation.json
@@ -1,21 +1,21 @@
 {
   "green-pass-activation": {
-    "invalid-qr-code-title": "Ungültiger QR Code!",
-    "invalid-qr-code-body": "Dieser QR Code ist kein gültiger 3-G QR Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus."
+    "invalid-qr-code-title": "Ungültiger QR-Code!",
+    "invalid-qr-code-body": "Dieser QR-Code ist kein gültiger 3-G QR-Code. Bitte benutzen Sie einen anderen oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G-Nachweises aus."
   },
   "acquire-ticket": {
     "title": "Ticket für Ort ausstellen",
     "description": "Hier können Sie sich ein Ticket für einen Ort an der TU Graz ausstellen lassen.",
-    "activation-link": "3-G Nachweis aktivieren",
-    "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3-G Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3-G Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
-    "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "no-proof-found-message": "Es wurde kein gültiger 3-G Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3-G Nachweis unter dem Menüpunkt ",
-    "valid-proof-found-message": "Es wurde ein gültiger 3-G Nachweis gefunden.",
+    "activation-link": "3-G-Nachweis aktivieren",
+    "additional-information": "Dieses wird benötigt, um einen Ort an der TU Graz betreten zu dürfen. Wenn Sie Ihren 3-G-Nachweis aktiviert haben, können Sie sich damit direkt an einem Ort an der TU Graz für einen bestimmten Zeitraum anmelden. Falls Sie noch keinen 3-G-Nachweis aktiviert haben, verwenden Sie bitte den Menüpunkt ",
+    "additional-information-2": " um einen Nachweis zu aktivieren. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "no-proof-found-message": "Es wurde kein gültiger 3-G-Nachweis gefunden. Bitte aktivieren Sie einen gültigen 3-G-Nachweis unter dem Menüpunkt ",
+    "valid-proof-found-message": "Es wurde ein gültiger 3-G-Nachweis gefunden.",
     "place-select-title": "Ort auswählen",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
     "refresh-button-text": "Ticket verlängern",
-    "no-proof-continue": "Ticket ohne 3-G Nachweis erstellen",
+    "no-proof-continue": "Ticket ohne 3-G-Nachweis erstellen",
     "create-ticket-success-title": "Ticket erfolgreich erstellt!",
     "create-ticket-success-body": "Das angeforderte Ticket für den Ort {{place}} wurde erfolgreich erstellt.",
     "other-error-title": "Fehler!",
@@ -26,16 +26,16 @@
     "manage-tickets-text": "Sie können Ihre aktiven Tickets verwalten unter: "
   },
   "acquire-3g-ticket": {
-    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G Regel) hochladen indem Sie den entsprechenden QR Code scannen oder ein vorhandenes PDF oder Bild mit QR Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3G Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
-    "invalid-qr-code": "Der QR Code enthält keinen gültigen 3-G Nachweis.",
-    "no-qr-code": "Es wurde kein QR Code gefunden.",
-    "no-qr-code-title": "Kein QR Code gefunden!",
-    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G Nachweises aus.",
-    "qr-button-text": "QR Code scannen",
+    "additional-information": "Sie können Ihren Nachweis einer geringen epidemiologischen Gefahr (3-G-Regel) hochladen indem Sie den entsprechenden QR-Code scannen oder ein vorhandenes PDF oder Bild mit QR-Code hochladen und sich damit ein Ticket für einen Ort ausstellen lassen. Dieses wird benötigt, um einen Ort betreten zu dürfen. Alternativ können Sie auch manuell bestätigen, dass Sie einen 3-G-Nachweis bei sich tragen und diesen im Falle einer manuellen Kontrolle nachweisen können.",
+    "invalid-qr-code": "Der QR-Code enthält keinen gültigen 3-G-Nachweis.",
+    "no-qr-code": "Es wurde kein QR-Code gefunden.",
+    "no-qr-code-title": "Kein QR-Code gefunden!",
+    "no-qr-code-body": "Im hochgeladenen Dokument wurde kein QR-Code gefunden. Bitte benutzen Sie ein anderes Dokument oder wählen Sie beim Ticketerwerb die manuelle Überprüfung des 3-G-Nachweises aus.",
+    "qr-button-text": "QR-Code scannen",
     "manually-button-text": "Datei hochladen",
     "filepicker-button-title": "PDF oder Bild auswählen",
     "filepicker-context": "PDF oder Bild zur Überprüfung auswählen",
-    "manual-uploading-message": "Suche nach validem QR Code...",
+    "manual-uploading-message": "Suche nach validem QR-Code...",
     "place-select-title": "Ticket für",
     "manual-proof-text": "Ich bestätige, dass ich geimpft, getestet oder genesen bin und einen gültigen Nachweis für die Dauer meines Aufenthalts in diesem Raum bei mir trage. Außerdem nehme ich zur Kenntnis, dass ich verpflichtet bin, diesen bei einer manuellen Kontrolle vorzuweisen.",
     "confirm-button-text": "Ticket erstellen",
@@ -48,10 +48,10 @@
     "skip-button-text": "Überspringen",
     "confirm-checkbox-valid-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
     "confirm-checkbox-no-cert-text": "Ich bestätige die Richtigkeit meiner Angaben und nehme zur Kenntnis, dass jeglicher Missbrauch der App greenlight oder die Angabe falscher Daten zu rechtlichen Konsequenzen führen kann.",
-    "3g-proof-label-text": "3-G Nachweis importieren",
+    "3g-proof-label-text": "3-G-Nachweis importieren",
     "remove-proof": "Nachweis entfernen",
     "found-valid-3g-preCheck": "Es wurden lokal gespeicherte valide 3-G Informationen gefunden.",
-    "found-valid-3g": "Es wurde ein gültiger 3-G Nachweis importiert.",
+    "found-valid-3g": "Es wurde ein gültiger 3-G-Nachweis importiert.",
     "found-valid-selftest-preCheck": "Es wurden ein lokal gespeicherter Selbsttest gefunden.",
     "found-valid-selftest": "Es wurden ein Selbsttest gefunden.",
     "not-same-person": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
@@ -63,18 +63,18 @@
     "validate-error-body": "Bitte versuchen Sie es noch einmal oder überspringen Sie den Vorgang.",
     "hcert-invalid": "Hochgeladener Nachweis ist ungültig.",
     "hcert-invalid-title": "Hochgeladener Nachweis ist ungültig.",
-    "hcert-invalid-body": "Der 3G-Nachweis ist aktuell nicht für den Eintritt gültig. Bitte laden Sie einen gültigen 3-G Nachweis hoch oder überspringen Sie den Vorgang.",
+    "hcert-invalid-body": "Der 3-G-Nachweis ist aktuell nicht für den Eintritt gültig. Bitte laden Sie einen gültigen 3-G-Nachweis hoch oder überspringen Sie den Vorgang.",
     "failed-activation-wrong-person-title": "Unstimmigkeiten gefunden",
     "failed-activation-wrong-person-body": "Der hochgeladene Nachweis konnte der angemeldeten Person nicht zu geordnet werden.",
     "self-test": "Selbsttest",
     "self-test-link": "Link",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
-    "3g-proof": "3-G Nachweis",
+    "3g-proof": "3-G-Nachweis",
     "3g-proof-status": "Status",
     "3g-proof-status-valid": "voraussichtlich gültig bis {{date}}",
     "3g-proof-proof-from": "Von",
     "3g-proof-birthdate": "Geburtsdatum",
-    "trust-and-save": "Diesem Gerät vertrauen und 3-G Nachweis importieren.",
+    "trust-and-save": "Diesem Gerät vertrauen und 3-G-Nachweis importieren.",
     "create-new-ticket": "Neues Ticket erstellen"
   },
   "show-active-tickets": {
@@ -95,11 +95,12 @@
     "other-error-title": "Fehler!",
     "other-error-body": "Es ist ein unbekannter Fehler aufgetreten.",
     "preselected-place": "Ort",
-    "3g-evidence": "3-G Nachweis:",
+    "3g-evidence": "3-G-Nachweis:",
     "self-test-found": "Selbsttest gefunden",
     "self-test-information": "Bitte überprüfen Sie ob der Nachweis noch gültig ist.",
     "self-test": "Selbsttest",
-    "self-test-link": "Link zum Test"
+    "self-test-link": "Link zum Test",
+    "no-evidence": "Es wurde kein gültiger gespeicherter 3-G-Nachweis gefunden. Zeigen Sie ihren Nachweis manuell vor oder laden Sie einen neuen Nachweis hoch, indem Sie ein neues Ticket erstellen."
   },
   "error-login-message": "Sie müssen eingeloggt sein um diese Funktion nutzen zu können!",
   "loading-message": "Lädt...",
